# rust-learning-group

./: .gitignore  Cargo.toml  README.md
polars1/: Cargo.toml
polars1/src/: HOMEWORK.md  main.rs
polars2/: Cargo.toml
polars2/data/: albums.json  customers.jsonl  nested.jsonl  nested_newline.json  orders.csv  test.jsonl  test_newline.json
polars2/src/: HOMEWORK.md  main.rs
polars3/: Cargo.toml
polars3/data/: distribution_centers.csv  products.csv  stock_data.csv
polars3/src/: HOMEWORK.md  main.rs
polars_sandbox/: Cargo.toml
polars_sandbox/src/: main.rs
sandbox/src/: main.rs
session1/: Cargo.toml
session1-intro/: Cargo.toml  HOMEWORK.md
session1-intro/src/: main.rs  test.rs
session1/src/: HOMEWORK.md  main.rs  test.rs
session2/: Cargo.toml
session2/src/: HOMEWORK.md  main.rs  test.rs
session3/: Cargo.toml
session3/src/: HOMEWORK.md  main.rs  test.rs
session4/: Cargo.toml
session4/src/: HOMEWORK.md  main.rs
session5/: Cargo.toml
session5/src/: HOMEWORK.md  main.rs
session9/: Cargo.toml
session9/src/: HOMEWORK.md  main.rs
