[package]
name = "polars3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
polars = { version = "0.38.3", features = ["lazy", "strings", "json", "dtype-struct", "dtype-date", "dtype-datetime"] }
serde = { version = "1.0.197", features = ["derive"] }
