[package]
name = "polars_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.38.3", features = ["lazy", "strings", "json", "dtype-struct", "cross_join", "interpolate"]}
polars-ops = { version = "0.38.3", features = ["pivot"]}
polars-sql = {version = "0.38.3"}
serde = { version = "1.0.197", features = ["derive"] }
